--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ parts/
 session-secret.b64
 src/encoded/static/css/bootstrap.css
 src/encoded/static/css/responsive.css
-src/encoded/static/css/style.css
+src/encoded/static/css/
 src/encoded/static/scss/_variables.original.scss
 src/encoded/static/build/
 src/encoded/tests/js/build/
