--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "minifyify": "^4.4.0",
     "moment": "^2.8.2",
     "react-tools": "^0.11.2",
-    "through": "^2.3.4"
+    "through": "^2.3.4",
+    "grunt-contrib-compass": "^1.0.1",
+    "grunt-bless": "^0.1.1"
   },
   "dependencies": {
     "brace": "^0.3.0",
