--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "brfs": "^1.2.0",
     "browserify": "^5.10.1",
+    "compass": "^0.1.0",
     "envify": "^3.0.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
