--- a/buildout.cfg
+++ b/buildout.cfg
@@ -120,6 +120,7 @@ cmds = NODE_PATH="" npm_config_cache="" npm install
 recipe = collective.recipe.template
 input = inline:
     #!/bin/sh
+    PATH=${buildout:directory}/bin:$PATH
     export NODE_PATH=${buildout:directory}/node_modules
     ulimit -n 1024
     exec ${buildout:directory}/node_modules/.bin/grunt $@
